test/type/fail/field_assign_undeclared.j
class A{
  Void main() { return; }
}

class B{
  Void f() {
    this.a = 5;
  }
}
